# aprilaire-ha

./: LICENSE  README.md  __init__.py  config_flow.py  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
custom_components/aprilaire/: __init__.py  binary_sensor.py  client.py  climate.py  config_flow.py  const.py  coordinator.py  crc.py  entity.py  humidifier.py  manifest.json  mock_server.py  packet.py  response.py  sensor.py  services.yaml  socket_client.py  util.py  utils.py
custom_components/aprilaire/translations/: en.json
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_entity.py  test_init.py  test_sensor.py  test_util.py
