[project]
name = "aprilaire-ha"
version = "0.5.4rc0"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "coverage", "homeassistant==2023.3.6", "pyaprilaire==0.5.3"]

[tool.bumpver]
current_version = "0.5.4rc0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"custom_components/aprilaire/manifest.json" = [
    '"version": "{version}"'
]
